--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -97,7 +97,7 @@
 
         </div>
 
-        <div>
+        <div class="termly-plans-overview-container">
             <div class="row text-center">
                 <div class="col-sm-6"><h4>Es & Os</h4></div>
                 <div class="col-sm-6"><h4>Benchmarks</h4></div>
