--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -36,6 +36,11 @@
     margin-top: 2rem;
 }
 
+.termly-plans-overview-container {
+    padding-bottom: 5rem;
+}
+
+
 .termly-plans-overview-section-row {
     margin-bottom: 1.5rem;
 }
