--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -67,9 +67,8 @@
                         </li>
                         <li class="nav-item manage-class-nav-item-rightmost">
                             <a id="termly-plans-edit" role="button" class="btn btn-primary"
-                            href="#">
-                                @*href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">*@
-                                    Re-Select Es&Os/Benchmarks</a>
+                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea.value.toString)">
+                                Re-Select Es&Os/Benchmarks</a>
                         </li>
                     </ul>
                 </div>
