--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -103,7 +103,10 @@
     padding: 0.5rem;
     background: rgba(250, 250, 250, 0.75);
     border: 1px solid #e3e3e3;
-    margin-bottom: 0.7rem;
+}
+
+.es-os-benchmarks-overview-row-with-just-code {
+    margin-bottom: 1.3rem;
 }
 
 .form-control[disabled] {
