--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -95,15 +95,23 @@
                             <div class="col-xs-3 col-lg-1"></div>
                             <div class="col-xs-3 col-lg-4">
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <span><strong>@{
-                                        if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan)) {
-                                            maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue.toString
-                                        } else {
-                                            "0%"
-                                        }
-                                    }</strong>
-                                    </span>
+                                @{
+                                    if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan)) {
+                                            <div class="progress-bar progress-bar-striped" role="progressbar"
+                                            style="width: @{maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue.toString}%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
+                                            </div>
+                                            <span>
+                                            <strong>
+                                            {maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue.toString}
+                                            %
+                                            </strong>
+                                            </span>
+                                    } else {
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <span><strong>0%</strong></span>
+                                    }
+                                }
+
                                 </div>
                             </div>
                             <div class="col-xs-3 col-lg-2"></div>
@@ -143,7 +151,16 @@
                                                     </div>
                                                     <div class="col-lg-3"></div>
                                                     <div class="col-lg-2">
+                                                    @if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan) &&
+                                                            maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._2.isDefinedAt(group)) {
+                                                        @if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._2(group).percentValue > 0) {
+                                                            <span class="badge badge-pill badge-success">Completed</span>
+                                                        } else {
+                                                            <span class="badge badge-pill badge-danger">Not Started</span>
+                                                        }
+                                                    } else {
                                                         <span class="badge badge-pill badge-danger">Not Started</span>
+                                                    }
                                                     </div>
                                                 </div>
                                             }
@@ -159,7 +176,12 @@
                                             <div class="col-lg-3"></div>
                                             <div class="col-lg-3"></div>
                                             <div class="col-lg-2">
+                                            @if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan) &&
+                                                    maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue > 0) {
+                                                <span class="badge badge-pill badge-success">Completed</span>
+                                            } else {
                                                 <span class="badge badge-pill badge-danger">Not Started</span>
+                                            }
                                             </div>
                                         </div>
                                     }
