--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -1,6 +1,5 @@
 @import models.timetoteach.TimeToTeachUserId
-@import models.timetoteach.planning.TermlyCurriculumSelection
-@import models.timetoteach.planning.CurriculumPlanProgressForClass
+@import models.timetoteach.planning.{CurriculumPlanProgressForClass, TermlyCurriculumSelection}
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, currentTermlyCurriculumSelection: TermlyCurriculumSelection, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass])
 
 @timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans",
@@ -93,28 +92,38 @@
                                 </a>
                             </div>
                             <div class="col-xs-3 col-lg-1"></div>
-                            <div class="col-xs-3 col-lg-4">
-                                <div class="progress">
-                                @{
-                                    if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan)) {
-                                            <div class="progress-bar progress-bar-striped" role="progressbar"
-                                            style="width: @{maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue.toString}%" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
-                                            </div>
-                                            <span>
-                                            <strong>
-                                            {maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue.toString}
-                                            %
-                                            </strong>
-                                            </span>
-                                    } else {
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                                            <span><strong>0%</strong></span>
-                                    }
-                                }
+                            @{
+                                if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan)) {
+                                    defining({
+                                        maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap(curriculumAreaToPlan)._1.percentValue.toString
+                                    } + "%") { overallPercent =>
+                                        defining(s"width: $overallPercent") { theWidth =>
+                                            defining(if(overallPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
+                                                <div class="col-xs-3 col-lg-4">
+                                                <div class="progress">
+                                                <div class={progressBackground} role="progressbar"
+                                                style={theWidth} aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
+                                                </div>
+                                                </div>
+                                                </div>
 
-                                </div>
-                            </div>
-                            <div class="col-xs-3 col-lg-2"></div>
+                                                <div class="col-xs-3 col-lg-1"><div class="text-info">{overallPercent}</div></div>
+
+                                            }
+                                        }
+                                    }
+                                } else {
+                                        <div class="col-xs-3 col-lg-4">
+                                        <div class="progress">
+                                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <span><strong>0%</strong></span>
+                                        </div>
+                                        </div>
+
+                                        <div class="col-xs-3 col-lg-1"></div>
+                                }
+                            }
+                            <div class="col-xs-3 col-lg-1"></div>
                             <div class="col-xs-3 col-lg-2">
                                 <button class="btn btn-sm btn-outline-success btn-block" role="button" href="#" disabled="true">
                             Share</button>
