--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -102,13 +102,10 @@
                                                 <div class="col-xs-3 col-lg-4">
                                                 <div class="progress">
                                                 <div class={progressBackground} role="progressbar"
-                                                style={theWidth} aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
+                                                style={theWidth} aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"><strong>{overallPercent}</strong>
                                                 </div>
                                                 </div>
                                                 </div>
-
-                                                <div class="col-xs-3 col-lg-1"><div class="text-info">{overallPercent}</div></div>
-
                                             }
                                         }
                                     }
@@ -119,11 +116,9 @@
                                         <span><strong>0%</strong></span>
                                         </div>
                                         </div>
-
-                                        <div class="col-xs-3 col-lg-1"></div>
                                 }
                             }
-                            <div class="col-xs-3 col-lg-1"></div>
+                            <div class="col-xs-3 col-lg-2"></div>
                             <div class="col-xs-3 col-lg-2">
                                 <button class="btn btn-sm btn-outline-success btn-block" role="button" href="#" disabled="true">
                             Share</button>
