--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -1,5 +1,6 @@
 @import models.timetoteach.TimeToTeachUserId
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, teacherSchoolToClasses: Map[String, List[duplicate.model.ClassDetails]])
+@import duplicate.model.ClassId
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, teacherSchoolToClasses: Map[String, List[duplicate.model.ClassDetails]], classIdToOverallProgress: Map[ClassId, Int])
 
 @timetoteachAppMain(handler, s"Termly Plans",
     userPictureUri, userFirstName, userFamilyName) {
@@ -60,7 +61,18 @@
                         </div>
                         <div class="col-xs-3 col-lg-2">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            @if(classIdToOverallProgress.isDefinedAt(teacherClass.id)) {
+                                defining(classIdToOverallProgress(teacherClass.id) + "%") { overallProgressPercent =>
+                                    defining(s"width: $overallProgressPercent") { theWidth =>
+                                defining(if(overallPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
+                                    <div class={progressBackground}  role="progressbar"
+                                    style={theWidth} aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"><strong>{overallProgressPercent}</strong></div>
+                                    }
+                                }
+                            }
+                            } else {
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                            }
                             </div>
                         </div>
                         <div class="col-xs-0 col-lg-6 muted">@userFirstName @userFamilyName</div>
