--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -37,7 +37,6 @@
             </div>
         </div>
 
-
         <div id="termly-plans-overview-of-all-classes-section">
         @for(schoolName_to_class <- teacherSchoolToClasses) {
             <div class="text-center termly-plans-overview-school-name"><h5>@schoolName_to_class._1</h5></div>
@@ -61,22 +60,22 @@
                         </div>
                         <div class="col-xs-3 col-lg-2">
                             <div class="progress">
-                                @{
-                                     if(classIdToOverallProgress.isDefinedAt(teacherClass.id)) {
-                                        defining(classIdToOverallProgress(teacherClass.id) + "%") { overallProgressPercent =>
-                                            defining(s"width: $overallProgressPercent") { theWidth =>
-                                                defining(if(overallProgressPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
-                                                    <div class={progressBackground} role="progressbar"
-                                                    style={theWidth} aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                                                        <strong>{overallProgressPercent}</strong>
-                                                    </div>
-                                                }
+                            @{
+                                if(classIdToOverallProgress.isDefinedAt(teacherClass.id)) {
+                                    defining(classIdToOverallProgress(teacherClass.id) + "%") { overallProgressPercent =>
+                                        defining(s"width: $overallProgressPercent") { theWidth =>
+                                            defining(if(overallProgressPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
+                                                <div class={progressBackground} role="progressbar"
+                                                style={theWidth} aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                                <strong>{overallProgressPercent}</strong>
+                                                </div>
                                             }
                                         }
-                                    } else {
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                                     }
+                                } else {
+                                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                                 }
+                            }
                             </div>
                         </div>
                         <div class="col-xs-0 col-lg-6 muted">@userFirstName @userFamilyName</div>
@@ -87,6 +86,12 @@
                 </div>
             }
         }
+
+            @if(teacherSchoolToClasses.isEmpty){
+                <div class="teacher-classes-deck">
+                    <h5 class="noClassesMsg text-center">No classes created yet.</h5>
+                </div>
+            }
         </div>
 
     </div>
