--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -120,8 +120,7 @@
                             }
                             <div class="col-xs-3 col-lg-2"></div>
                             <div class="col-xs-3 col-lg-2">
-                                <button class="btn btn-sm btn-outline-success btn-block" role="button" href="#" disabled="true">
-                            Share</button>
+                                <button class="btn btn-sm btn-outline-primary btn-block" role="button" href="#" disabled="true">Download PDF</button>
                             </div>
                         </div>
 
