--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -12,12 +12,12 @@
    <div class="d-flex">
     <ul class="nav mr-auto justify-content-between">
      <li class="nav-item manage-class-nav-item-leftmost">
-      <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+      <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
        Dashboard</a>
      </li>
 
      <li class="nav-item manage-class-nav-item-on-left">
-      <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+      <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
        Classes Home</a>
      </li>
 
@@ -54,7 +54,7 @@
      <label class="add-new-class-label" for="add-new-class-groups-button">Class Groups</label>
 
      <div id="add-new-class-groups-div"></div>
-     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-outline-primary add-new-class-button">
+     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button">
       Add New Class Group</button>
     </div>
    </div>
