--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -25,12 +25,8 @@
              <div class="d-flex">
                  <ul class="nav mr-auto justify-content-between">
                      <li class="nav-item manage-class-nav-item-leftmost">
-                         <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                         <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
                              Dashboard</a>
-                     </li>
-                     <li class="nav-item manage-class-nav-item-on-left">
-                         <a class="btn btn-outline-primary" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
-                             Termly Plans Home</a>
                      </li>
                  </ul>
 
