--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -41,11 +41,11 @@
                     <div class="d-flex ">
                         <ul class="nav mr-auto justify-content-between">
                             <li class="nav-item manage-class-nav-item-leftmost">
-                                <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                                <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
                                     Dashboard</a>
                             </li>
                             <li class="nav-item manage-class-nav-item-on-left">
-                                <a class="btn btn-outline-primary" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
+                                <a class="btn btn-primary" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
                                     Termly Plans Home</a>
                             </li>
                         </ul>
@@ -66,7 +66,7 @@
                                     Class Timetable</a>
                             </li>
                             <li class="nav-item manage-class-nav-item-rightmost">
-                                <a id="termly-plans-edit" role="button" class="btn btn-primary"
+                                <a id="termly-plans-edit" role="button" class="btn btn-warning"
                                 href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea.value.toString)">
                                     Re-Select Es&Os/Benchmarks</a>
                             </li>
