--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -76,7 +76,7 @@
                             </div>
                             <div class="col-xs-0 col-lg-6 muted">@userFirstName @userFamilyName</div>
                             <div class="col-xs-3 col-lg-2">
-                                <button class="btn btn-sm btn-outline-primary btn-block" role="button" href="#" disabled="true">Download PDF</button>
+                                <button class="btn btn-sm btn-danger btn-block" role="button" href="#" disabled="true">Download PDF</button>
                             </div>
                         </div>
                     </div>
