--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -102,7 +102,8 @@
                                                 <div class="col-xs-3 col-lg-4">
                                                 <div class="progress">
                                                 <div class={progressBackground} role="progressbar"
-                                                style={theWidth} aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"><strong>{overallPercent}</strong>
+                                                style={theWidth} aria-valuenow="33" aria-valuemin="0" aria-valuemax="100">
+                                                <strong>{overallPercent}</strong>
                                                 </div>
                                                 </div>
                                                 </div>
@@ -118,10 +119,7 @@
                                         </div>
                                 }
                             }
-                            <div class="col-xs-3 col-lg-2"></div>
-                            <div class="col-xs-3 col-lg-2">
-                                <button class="btn btn-sm btn-outline-primary btn-block" role="button" href="#" disabled="true">Download PDF</button>
-                            </div>
+                            <div class="col-xs-6 col-lg-4"></div>
                         </div>
 
                         <div class="termly-plans-collapse-container">
@@ -193,8 +191,16 @@
                         </div>
                     </div>
                 }
-
             </div>
+
+            <div class="d-flex justify-content-end">
+                <div class="col-10"></div>
+                <div class="col-2">
+                    <button class="btn btn-sm btn-danger btn-block" role="button" href="#" disabled="true">
+                        Download PDF</button>
+                </div>
+            </div>
+
 
         </div>
     </div>
